OY-5234 Only fetch ensikertalaisuus for kk-hakus